# efficient_online_segmentation

./: CMakeLists.txt  README.md  package.xml
core/: adaptive_ground_plane_estimator.cpp  adaptive_ground_plane_estimator.h  advanced_segmentation.cpp  advanced_segmentation.h  efficient_online_segmentation.cpp  efficient_online_segmentation.h  sector.cpp  sector.h  segmentation_utility.cpp  segmentation_utility.h  sgmtt_utility.cpp  sgmtt_utility.h  smart_sector.cpp  smart_sector.h
launch/: advanced_params.yaml  advanced_segmentation.launch  advanced_segmentation.rviz  efficient_online_segmentation.launch  efficient_online_segmentation.rviz  segmentation_params.yaml
ros_interface/: advanced_segmentation_node.cpp  efficient_online_segmentation_node.cpp
