<?xml version="1.0"?>
<package format="2">
  <name>efficient_online_segmentation</name>
  <version>0.0.1</version>
  <description>advanced segmentation of ground and wall.</description>
  
  <maintainer email="wgh@XXX.com">Lorenz Wellhausen</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>eigen_conversions</depend>
  <depend>roscpp</depend>  
  <depend>tf2_ros</depend>

  <!-- <depend>linefit_ground_segmentation</depend> -->
  
</package>

